# FootDetection

./: CMakeLists.txt  FootDetection.cpp  main.cpp
